Implement the idyntree-model-view-meshcat python script

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -52,6 +52,8 @@ if(WIN32)
     set_target_properties(${target_name} PROPERTIES SUFFIX ".pyd")
 endif(WIN32)
 
+add_subdirectory(scripts)
+
 # if compile tests execute also python tests
 if(IDYNTREE_COMPILE_TESTS)
     add_subdirectory(tests)
