Fix cross-compilation of Python bindings

--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -41,8 +41,12 @@ if(IDYNTREE_USES_PYTHON OR IDYNTREE_USES_PYTHON_PYBIND11)
     else()
         set(IDYNTREE_SEARCHED_Python_Development_Component "Development.Module")
     endif()
-    find_package(Python3 COMPONENTS Interpreter ${IDYNTREE_SEARCHED_Python_Development_Component} NumPy REQUIRED)
-
+    if(${IDYNTREE_DETECT_ACTIVE_PYTHON_SITEPACKAGES} OR ${IDYNTREE_PACKAGE_FOR_PYPI})
+        set(IDYNTREE_SEARCHED_Python_Interpreter "")
+     else()
+        set(IDYNTREE_SEARCHED_Python_Interpreter "Interpreter")
+    endif()
+        find_package(Python3 COMPONENTS ${IDYNTREE_SEARCHED_Python_Interpreter} ${IDYNTREE_SEARCHED_Python_Development_Component} NumPy REQUIRED)
     if (IDYNTREE_DETECT_ACTIVE_PYTHON_SITEPACKAGES)
        set(PYTHON_INSTDIR ${Python3_SITELIB}/idyntree)
     elseif(IDYNTREE_PACKAGE_FOR_PYPI)
