--- a/src/visualization/CMakeLists.txt
+++ b/src/visualization/CMakeLists.txt
@@ -73,8 +73,10 @@ if(IDYNTREE_USES_IRRLICHT)
     find_package(OpenGL)
     find_package(Irrlicht REQUIRED)
 
-    target_include_directories(${libraryname} PRIVATE SYSTEM ${OPENGL_INCLUDE_DIR})
-    target_link_libraries(${libraryname} PRIVATE Irrlicht::Irrlicht ${OPENGL_LIBRARIES})
+    target_link_libraries(${libraryname} PRIVATE Irrlicht::Irrlicht)
+    if(TARGET OpenGL::GL)
+      target_link_libraries(${libraryname} PRIVATE OpenGL::GL)
+    endif()
     if(MSVC)
        add_definitions(-D_USE_MATH_DEFINES)
     endif()
