--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,7 @@ jobs:
       if: contains(matrix.os, 'windows')
       shell: bash -l {0}
       run: |
-        bash_vc_install=${VCToolsInstallDir//\\//}
-        compiler_path=${bash_vc_install}bin/Hostx64/x64/cl.exe
+        compiler_path=C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\bin\Hostx64\x64\cl.exe
         echo "CC=${compiler_path}" >> $GITHUB_ENV
         echo "CXX=${compiler_path}" >> $GITHUB_ENV
         echo "CONDA_CXX_LIBRARIES_INSTALL_PREFIX=${CONDA_PREFIX}\Library" >> $GITHUB_ENV
