Add simple tests for ModelLoader in Python

--- a/bindings/python/tests/CMakeLists.txt
+++ b/bindings/python/tests/CMakeLists.txt
@@ -7,3 +7,4 @@ add_custom_command(TARGET copy_python_tests_in_build PRE_BUILD
 add_test(NAME PythonGeometryTests COMMAND ${Python3_EXECUTABLE} geometry.py)
 add_test(NAME PythonJointTests COMMAND ${Python3_EXECUTABLE} joints.py)
 add_test(NAME PythonHelperTests COMMAND ${Python3_EXECUTABLE} helpers.py)
+add_test(NAME PythonModelLoaderTests COMMAND ${Python3_EXECUTABLE} modelloader.py)
