--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -27,11 +27,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
-      - run: git fetch --prune --unshallow
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -57,7 +58,7 @@ jobs:
       - name: Test import
         run: python -c 'import idyntree.bindings'
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist/*.tar.gz
@@ -77,11 +78,12 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@master
-      - run: git fetch --prune --unshallow
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -100,7 +102,7 @@ jobs:
             apt-get install -y libeigen3-dev libassimp-dev libxml2-dev coinor-libipopt-dev libirrlicht-dev
           CIBW_TEST_COMMAND: "python -c 'import idyntree.bindings'"
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           name: dist
           path: ./wheelhouse/*.whl
@@ -115,7 +117,7 @@ jobs:
 
     steps:
 
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
         with:
           name: dist
           path: dist
@@ -123,7 +125,7 @@ jobs:
       - name: Inspect dist folder
         run: ls -lah dist/
 
-      - uses: pypa/gh-action-pypi-publish@master
+      - uses: pypa/gh-action-pypi-publish@release/v1
         if: |
           github.repository == 'robotology/idyntree' &&
           ((github.event_name == 'release' && github.event.action == 'published') ||
