--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,7 +161,7 @@ jobs:
 
 
   build-with-apt-dependencies:
-    name: '[${{ matrix.os }}@${{ matrix.build_type }}]'
+    name: '[apt:${{ matrix.docker_image }}@${{ matrix.build_type }}]'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
