--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,8 +182,8 @@ jobs:
 
     - name: Dependencies [apt]
       run: |
-        apt-get update
-        apt-get install \
+        apt-get -y update
+        apt-get -y install \
             git build-essential cmake libace-dev coinor-libipopt-dev libeigen3-dev swig \
             libxml2-dev liboctave-dev python3-dev python3-numpy valgrind libassimp-dev libirrlicht-dev curl unzip
 
