--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,15 @@ jobs:
       shell: bash
       run: |
         env
-
+    - name: Get current week
+      id: week
+      run: echo "week=$(date +%Y-%U)" >> "${GITHUB_OUTPUT}"
     - uses: mamba-org/setup-micromamba@v1
       with:
         environment-file: ci_env.yml
+        cache-environment-key: environment-${{ steps.week.outputs.week }}
+        cache-downloads-key: downloads-${{ steps.week.outputs.week }}
+
 
     - name: Install files to enable compilation of mex files [Conda/Linux]
       if: contains(matrix.os, 'ubuntu')
