--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,7 @@ jobs:
         docker_image:
           - "ubuntu:20.04"
           - "ubuntu:22.04"
-          - "debian:sid"
+          - "debian:testing"
 
     container:
       image: ${{ matrix.docker_image }}
