Shorten header structure for Model and Sensors and merge Model and Sensors

--- a/src/model/tests/CMakeLists.txt
+++ b/src/model/tests/CMakeLists.txt
@@ -19,3 +19,6 @@ endmacro()
 add_unit_test(Joint)
 add_unit_test(Link)
 add_unit_test(Model)
+add_unit_test(ReducedModelWithFT)
+add_unit_test(SensorsList)
+add_unit_test(ThreeAxisForceTorqueContactSensor)
